[package]
name = "ping"
version = "0.1.0"
authors = ["Ethan Kiang <chocopuff298@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.17.0"
byteorder = "1.3.4"
clap = "2.33.0"
ctrlc = "3.1.4"
